Bug 311881 - new printer dialog does not accept cups-pdf urls.
Summary: new printer dialog does not accept cups-pdf urls.
Status: RESOLVED FIXED
Alias: None
Product: print-manager
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Nicoletti
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-18 12:48 UTC by Pascal d'Hermilly
Modified: 2018-01-25 18:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
cups-pdf can't proceed (87.45 KB, image/png)
2013-03-21 00:49 UTC, davidkacerek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pascal d'Hermilly 2012-12-18 12:48:38 UTC
the new printer dialog does not allow you to procede with a cups-pdf url, even if it was autodetected by itself.
The autodetected cups-pdf url is: cups-pdf:/://
the CUPS web interface suggests "cups-pdf:/" but this is not accepted either.
Thus the bug seems twofold:
-autodetected url is wrong
-url is not accepted as valid and user is not allowed to proceed.

Reproducible: Always

Actual Results:  
-

Expected Results:  
-
Comment 1 Pascal d'Hermilly 2012-12-18 12:49:00 UTC
btw. KDE 4.10 beta 2
Comment 2 davidkacerek 2013-03-21 00:49:37 UTC
Created attachment 78253 [details]
cups-pdf can't proceed
Comment 3 davidkacerek 2013-03-21 00:51:54 UTC
Comment on attachment 78253 [details]
cups-pdf can't proceed

yep, still an issue in KDE 4.10.1 in Arch Linux x64. The url "cups-pdf:/" is detected correctly but the dialog still doesn't allow me to proceed.
Comment 4 Pascal d'Hermilly 2013-11-24 18:51:05 UTC
This is still a problem in 4.11.2
Can't we just give the user a warning that the URL looks wrong - forcing filters always seem to cause trouble.
Comment 5 Daniel Nicoletti 2018-01-25 18:28:34 UTC
Git commit 4bce8ae8b513c990b231b119235b45eb1da8e1db by Daniel Nicoletti.
Committed on 25/01/2018 at 18:24.
Pushed by dantti into branch 'master'.

Fix not accepting cups-pdf urls

M  +17   -9    add-printer/ChooseUri.cpp

https://commits.kde.org/print-manager/4bce8ae8b513c990b231b119235b45eb1da8e1db