Fix not accepting cups-pdf urls

BUG: 311881